# lnArduino

./: .clang-format  .gitignore  .gitmodules  ArduinoToolchainGd32.cmake  CMakeLists.txt  FreeRTOSConfig.h  LICENSE.txt  README.md  arduino.cmake  embeddedPrintf.cmake  entry.S  esprit.cmake  freeRTOS.cmake  freeRTOS_port.cmake  freeRTOS_port_arm.cmake  freeRTOS_port_arm_gd32fx.cmake  freeRTOS_port_riscv.cmake  freeRTOS_port_riscv_ch32v3x.cmake  freeRTOS_port_riscv_gd32fx.cmake  gd32library.cmake  lnArduino.cmake  lnArduino_compat.cmake  lnEmbeddedPrint.cmake  lnFreeRTOS.cmake  lnSystemTime.h  mcuSelect_doc.txt  rnArduino.cmake  setup.cmake  start.S  toolchain_arm.cmake  toolchain_arm_gd32fx.cmake  toolchain_arm_gd32fx_clang.cmake  toolchain_riscv.cmake  toolchain_riscv_ch32v3x.cmake  toolchain_riscv_ch32v3x_clang.cmake  toolchain_riscv_gd32fx.cmake
demoProject/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  cleanup.sh  common_CMakeLists.cmake  common_mcuSelect.cmake  common_platformConfig.cmake  hello.cpp  platformConfig.cmake
demoProject/ad8993/: CMakeLists.txt  hello.cpp
demoProject/ad9833/: CMakeLists.txt  hello.cpp
demoProject/adc/: CMakeLists.txt  hello.cpp
demoProject/advanceADC/: CMakeLists.txt  hello.cpp
demoProject/basicDac/: CMakeLists.txt  hello.cpp
demoProject/blink/: CMakeLists.txt  hello.cpp
demoProject/bp/adc/: CMakeLists.txt  hello.cpp
demoProject/bp/advanceADC/: CMakeLists.txt  hello.cpp
demoProject/bp/basicDac/: CMakeLists.txt  hello.cpp
demoProject/bp/exti/: CMakeLists.txt  hello.cpp
demoProject/bp/flash/: CMakeLists.txt  hello.cpp
demoProject/bp/i2c_scanner/: hello.cpp
demoProject/bp/mcp23017/: CMakeLists.txt  hello.cpp
demoProject/bp/nvm/: CMakeLists.txt  hello.cpp  platformConfig.cmake
demoProject/bp/pwm/: CMakeLists.txt  hello.cpp.old  shifting_fq.cpp  simple_pwm.cpp  single_shot.cpp
demoProject/bp/pwm_dma/: CMakeLists.txt  hello.cpp
demoProject/bp/rotaryEncoder/: CMakeLists.txt  hello.cpp
demoProject/bp/rust_timing_adc/: CMakeLists.txt  platformConfig.cmake
demoProject/bp/signalGenerator/: CMakeLists.txt  hello.cpp  signal.cpp  (+1 more)
demoProject/everything/: CMakeLists.txt  hello.cpp
demoProject/exti/: CMakeLists.txt  hello.cpp
demoProject/flash/: hello.cpp
demoProject/flatBlink/: CMakeLists.txt  hello.cpp  mcuSelect.cmake  platformConfig.cmake
demoProject/hello/: CMakeLists.txt  hello.cpp
demoProject/i2c_scanner/: CMakeLists.txt  hello.cpp  mcuSelect.cmake
demoProject/lcd/: CMakeLists.txt  hello.cpp  nano_compressed.h  nano_decl.h  platformConfig.cmake
demoProject/mcp23017/: CMakeLists.txt  hello.cpp
demoProject/nvm/: CMakeLists.txt  hello.cpp
demoProject/pwm/: CMakeLists.txt  hello.cpp  hello.cpp.old  mcuSelect.cmake  shifting_fq.cpp  simple_pwm.cpp  single_shot.cpp
demoProject/pwm_dma/: CMakeLists.txt  hello.cpp
demoProject/rotaryEncoder/: CMakeLists.txt  hello.cpp  mcuSelect.cmake  platformConfig.cmake
demoProject/rp2040_pio/: common_CMakeLists.cmake  common_mcuSelect.cmake  common_platformConfig.cmake
demoProject/rust_hello_world/: CMakeLists.txt  mcuSelect.cmake  platformConfig.cmake
demoProject/rust_timing_adc/: CMakeLists.txt  build_default.cmake  mcuSelect.cmake  platformConfig.cmake
demoProject/serial/: CMakeLists.txt  hello.cpp
demoProject/signalGenerator/: CMakeLists.txt  hello.cpp  signal.cpp  signal.h
demoProject/simplerMCP4725/: CMakeLists.txt  hello.cpp
demoProject/ssd1306/: CMakeLists.txt  hello.cpp
demoProject/st7735/: CMakeLists.txt  hello.cpp
demoProject/systemTime/: CMakeLists.txt  hello.cpp
demoProject/timerIrq/: hello.cpp
demoProject/usb_cdc/: CMakeLists.txt  hello.cpp  hello.h  mcuSelect.cmake  updatedb.sh
demoProject/usb_to_serial/: CMakeLists.txt
demoProject/ws2812b/: CMakeLists.txt  hello.cpp  mcuSelect.cmake
demoProject/ws2812b_timer/: CMakeLists.txt  hello.cpp  mcuSelect.cmake
libraries/NeVerMind/: CMakeLists.txt  README.md  nvmCore.cpp  nvmCore.h  nvmCore_internal.h
libraries/WS2812_rp_single/: CMakeLists.txt  lnWS2812_rp_single.cpp  lnWS2812_rp_single.h  lnWS2812_rp_single_pio.cpp  lnWS2812_rp_single_pio.h  lnWS2812_rp_single_spi.cpp  lnWS2812_rp_single_spi.h  ws2812.pio.h
libraries/segger-rtt/: CMakeLists.txt  lnLogger_rtt.cpp
libraries/tinyUsb/: CMakeLists.txt  README.txt  README_LN_ARDUINO.txt  basic_cdc.cpp  demo.cpp  lnTinyUsb.h  lnTinyUsbImpl.cpp  lnTusb.cpp  lnUsbCDC.cpp  st.h  tiny.cmake  tinyusb2ln.cpp  tusb_config.h  tusb_config.h.gch  tusb_config.h.in
mcus/common_bluepill/: CMakeLists.txt  lnADC.cpp  lnADC_base.cpp  lnADC_timing.cpp  lnBasicDelayTimer.cpp  lnBasicTimer.cpp  lnDAC.cpp  lnDelayTimer.cpp  lnDma.cpp  lnDmaTimer.cpp  lnExti.cpp  lnFastGpio.h  lnGPIO.cpp  lnI2C.cpp  lnI2C_impl.cpp  lnRCU.cpp  lnSPI_bp.cpp  lnSPI_bp.h  lnSPI_bp_dma.cpp  lnSerial.cpp  lnSerialBpCore.h  lnSerialCore.cpp  lnSerialRxTx.cpp  lnSerialRxTx.h  lnSerialRxTxDma.cpp  lnSerialRxTxDma.h  lnSerialTxOnly.cpp  lnSerialTxOnly.h  lnSerialTxOnlyDma.cpp  lnSerialTxOnlyDma.h  lnSerialTxOnlyDmaBuffer.cpp  lnStubs.cpp  lnSystemInit.cpp  lnTimer.cpp  lnUSBD.cpp  systemAlloc.cpp  systemHelper.cpp
rust/: CMakeLists.txt  bindgen.sh  lnAll.h
rust/corrosion/: CMakeLists.txt  README_LN_ARDUINO.txt
rust/rnArduino/: Cargo.toml  build.rs
rust/rust_esprit/: Cargo.toml
src/: CMakeLists.txt  MapleFreeRTOS1000_pp.cpp  lnADC.cpp  lnADC_base.cpp  lnADC_timing.cpp  lnBasicDelayTimer.cpp  lnBasicTimer.cpp  lnCpuID_arm_gd32fx.cpp  lnCpuID_riscv.cpp  lnCpuID_riscv_gd32fx.cpp  lnDAC.cpp  lnDebug.cpp  lnDelayTimer.cpp  lnDma.cpp  lnDmaTimer.cpp  lnExti.cpp  lnFMC.cpp  lnFreeRTOSDebug.cpp  lnFreeRTOS_pp.cpp  lnGPIO.cpp  lnI2C.cpp  lnI2C_impl.cpp  lnIRQ.cpp  lnIRQ_arm.cpp  lnIRQ_arm_gd32fx.cpp  lnIRQ_riscv.cpp  lnIRQ_riscv_ch32v3x.cpp  lnIRQ_riscv_gd32fx.cpp  lnRCU.cpp  lnRCU_ch32v3x.cpp  lnRCU_systemClock.cpp  lnRCU_systemClock_arm.cpp  lnRCU_systemClock_arm_gd32fx.cpp  lnRCU_systemClock_riscv.cpp  lnRCU_systemClock_riscv_ch32v3x.cpp  lnRCU_systemClock_riscv_gd32fx.cpp  lnRunTime_arm.cpp  lnRunTime_arm_gd32fx.cpp  lnRunTime_riscv.cpp  lnRunTime_riscv_ch32v3x.cpp  (+18 more)
(+731 files in other folders)
