SET(SEGGER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/segger/)
ADD_LIBRARY(segger-rtt STATIC)
SET(S ${SEGGER_FOLDER}/RTT)
TARGET_SOURCES(segger-rtt PRIVATE ${S}/SEGGER_RTT.c  ${S}/SEGGER_RTT_ASM_ARMv7M.S lnLogger_rtt.cpp)
IF(("${LN_MCU}" STREQUAL "M3") OR ("${LN_MCU}" STREQUAL "M4") OR ("${LN_MCU}" STREQUAL "M33"))
  TARGET_SOURCES(segger-rtt PRIVATE ${S}/SEGGER_RTT_printf.c)
ENDIF()
TARGET_INCLUDE_DIRECTORIES(segger-rtt PUBLIC ${SEGGER_FOLDER}/Config ${S})
TARGET_INCLUDE_DIRECTORIES(esprit_dev INTERFACE ${SEGGER_FOLDER}/Config ${S})
